--- a/apps/webapp/package.json
+++ b/apps/webapp/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource/heebo": "^5.1.0",
     "react": "^18.3.1",
+    "react-digital-clock": "^0.1.2",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
